--- a/final/.env
+++ b/final/.env
@@ -1,7 +1,7 @@
 # .env
 
-SLACK_TOKEN = 'xoxp-6829667733234-6852447469088-6826752050469-41b5914fa1ab48d56abe1733a65674b7'
-SLACK_CHANNEL = '#test'
+SLACK_TOKEN = 'SLACK_TOKEN'
+SLACK_CHANNEL = 'SLACK_CHANNEL'
 LEAKBASE_FILE_PATH = "/home/ubuntu/crawler/data/leakbase_data.json"
 LOCKBIT_FILE_PATH = "/home/ubuntu/crawler/data/lockbit_data.json"
 BLACKSUIT_FILE_PATH = "/home/ubuntu/crawler/data/blacksuit_data.json"
